--- a/team-bio.css
+++ b/team-bio.css
@@ -1,16 +1,71 @@
 @import url('index.css'); /*so we don't have to repeat all the basic css code */
 
-.bio-container{
-    margin-top: auto;
-    margin-bottom: auto;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
 }
 
-.bio-row{
-    margin-top: 70px;
+html {
+    box-sizing: border-box;
 }
 
-.member-name{
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+.header{
+    font-size: 8rem;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.img-fluid{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 350px;
+    object-fit: cover; 
+}
+
+.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 20px;
+}
+
+.card {
+    margin: 30px;
+}
+
+.container {
+    padding: 0 25px;
+}
+
+.container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.h2{
+    margin-top: 15px;
+}
+
+.title {
+    color: #5CA4A9;
+    font-style: italic;
+}
+
+.body-text {
     color: black;
-    padding: 30px 0px 10px 0px;
-    font-size: larger;
+}
+
+@media screen and (max-width: 400px) {
+    .column {
+        width: 100%;
+        display: block;
+    }
 }
